--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Finance Flow - Gerenciador Financeiro</title>
+    <title>Desp Finance- Gerenciador Financeiro</title>
   </head>
 
   <body>
