corrigindo bugs no backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/grafico-histograma.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Desp Finance- Gerenciador Financeiro</title>
+    <title>DespFinancee — Controle financeiro com IA e gamificação</title>
+    <meta name="description"
+      content="DespFinancee: gestão financeira inteligente e divertida. IA, gamificação, score financeiro, exportação total e segurança — 100% gratuito e open source." />
+    <meta name="theme-color" content="#6366F1" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="DespFinancee" />
+    <meta property="og:title" content="DespFinancee — Controle financeiro com IA e gamificação" />
+    <meta property="og:description"
+      content="IA que trabalha por você, gamificação que engaja e segurança de verdade. 100% gratuito e open source." />
+    <meta property="og:url" content="/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DespFinancee — Controle financeiro com IA e gamificação" />
+    <meta name="twitter:description" content="IA, gamificação, score e exportação total. Open source e gratuito." />
   </head>
 
   <body>
