--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,12 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DespFinancee — Controle financeiro com IA e gamificação" />
     <meta name="twitter:description" content="IA, gamificação, score e exportação total. Open source e gratuito." />
+    <!-- Fonts: Inter + Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet">
   </head>
 
   <body>
