--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,27 +5,35 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
-                   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
-                   font-src 'self' https://fonts.gstatic.com;
-                   connect-src 'self' ws://localhost:* http://localhost:* https://*.vercel.app https://*.netlify.app https://*.railway.app;
-                   img-src 'self' data: https:;
-                   script-src 'self' 'unsafe-eval' 'unsafe-inline';">
+
+    <!-- Content Security Policy corrigida -->
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        font-src 'self' https://fonts.gstatic.com;
+        img-src 'self' data: https:;
+        connect-src 'self' ws://localhost:5173 http://localhost:* https://*;
+        script-src 'self' 'unsafe-eval';
+      " />
+
     <title>DespFinancee — Controle financeiro com IA e gamificação</title>
+
     <meta name="description"
       content="DespFinancee: gestão financeira inteligente e divertida. IA, gamificação, score financeiro, exportação total e segurança — 100% gratuito e open source." />
     <meta name="theme-color" content="#6366F1" />
+
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="DespFinancee" />
     <meta property="og:title" content="DespFinancee — Controle financeiro com IA e gamificação" />
     <meta property="og:description"
       content="IA que trabalha por você, gamificação que engaja e segurança de verdade. 100% gratuito e open source." />
     <meta property="og:url" content="/" />
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DespFinancee — Controle financeiro com IA e gamificação" />
     <meta name="twitter:description" content="IA, gamificação, score e exportação total. Open source e gratuito." />
-    <!-- Fonts: Inter + Poppins -->
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
