--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
         font-src 'self' https://fonts.gstatic.com;
         img-src 'self' data: https:;
-        connect-src 'self' ws://localhost:5173 http://localhost:* https://*;
+        connect-src 'self' ws://localhost:* http://localhost:* https://*;
         script-src 'self' 'unsafe-eval';
       " />
 
