--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="DespFinancee" />
+    <meta name="msapplication-TileColor" content="#6366F1" />
+    <meta name="msapplication-tap-highlight" content="no" />
 
     <!-- Content Security Policy corrigida -->
     <meta http-equiv="Content-Security-Policy" content="
@@ -43,7 +50,7 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 
 </html>
